# tmux_gui

./: .gitignore  README.md  pyproject.toml
src/: app.py  main_window.py
src/core/: __init__.py  ansi_parser.py  config.py  ssh_pool.py  tmux_manager.py  tmux_state.py
src/widgets/: connect_dialog.py  connection_tree.py  history_dialog.py  pane_layout.py  pane_widget.py  settings_dialog.py  window_tabs.py
tests/: test_ansi_parser.py  test_config.py  test_tmux_state.py
