[project]
name = "tmuxpilot"
version = "0.1.0"
description = "Lightweight Windows GUI for managing remote tmux sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "asyncssh>=2.14",
    "qasync>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "ruff>=0.4",
]

[project.scripts]
tmuxpilot = "src.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
